fix live-build (#165)

--- a/etc/terraform.conf
+++ b/etc/terraform.conf
@@ -2,26 +2,25 @@
 ARCH="amd64"
 
 # base codename
-BASECODENAME="jammy"
+BASECODENAME="sid"
 
 # base version
-BASEVERSION="22.04.1"
+BASEVERSION="12"
 
 # distribution codename
-CODENAME="jammy"
+CODENAME="orchid"
 
 # distribution version
-VERSION="22.04.1"
+VERSION="2.0"
 
 # distribution channel
-CHANNEL="unstable"
-#CHANNEL="all"
+CHANNEL="testing"
 
 # distribution name
-NAME="VanillaOS"
+NAME="Vanilla OS"
 
 # mirror to fetch packages from
-MIRROR_URL="http://archive.ubuntu.com/ubuntu/"
+MIRROR_URL="http://snapshot.debian.org/archive/debian/20230319T030536Z"
 
 # use HWE kernel and packages?
 HWE="yes"
@@ -30,4 +29,4 @@ HWE="yes"
 OUTPUT_SUFFIX=""
 
 # folder suffix for the package lists to use
-PACKAGE_LISTS_SUFFIX="calamares"
+PACKAGE_LISTS_SUFFIX="vanilla-installer"
