--- a/etc/auto/config
+++ b/etc/auto/config
@@ -12,38 +12,37 @@ fi
 
 lb config noauto \
     --architectures "$ARCH" \
-    --mode ubuntu \
-    --initramfs none \
+    --mode debian \
     --distribution "$BASECODENAME" \
     --parent-distribution "$BASECODENAME" \
-    --archive-areas "main restricted universe multiverse" \
-    --parent-archive-areas "main restricted universe multiverse" \
-    --linux-packages linux-image \
+    --archive-areas "main non-free" \
+    --parent-archive-areas "main contrib non-free non-free-firmware" \
+    --linux-packages "linux-image linux-headers" \
     --linux-flavours "$KERNEL_FLAVORS" \
-    --bootappend-live "boot=casper maybe-ubiquity quiet splash" \
+    --bootappend-live "boot=live config username=vanilla user-fullname=Bee quiet splash" \
     --mirror-bootstrap "$MIRROR_URL" \
     --parent-mirror-bootstrap "$MIRROR_URL" \
-    --mirror-chroot-security "http://security.ubuntu.com/ubuntu/" \
-    --parent-mirror-chroot-security "http://security.ubuntu.com/ubuntu/" \
-    --mirror-binary-security "http://security.ubuntu.com/ubuntu/" \
-    --parent-mirror-binary-security "http://security.ubuntu.com/ubuntu/" \
-    --mirror-binary "http://archive.ubuntu.com/ubuntu/" \
-    --parent-mirror-binary "http://archive.ubuntu.com/ubuntu/" \
-    --keyring-packages ubuntu-keyring \
-    --apt-options "--yes --option Acquire::Retries=5 --option Acquire::http::Timeout=100" \
+    --mirror-chroot-security "http://snapshot.debian.org/archive/debian-security/20230319T030536Z" \
+    --parent-mirror-chroot-security "http://snapshot.debian.org/archive/debian-security/20230319T030536Z" \
+    --mirror-binary-security "http://snapshot.debian.org/archive/debian-security/20230319T030536Z" \
+    --parent-mirror-binary-security "http://snapshot.debian.org/archive/debian-security/20230319T030536Z" \
+    --mirror-binary "http://snapshot.debian.org/archive/debian/20230319T030536Z" \
+    --parent-mirror-binary "http://snapshot.debian.org/archive/debian/20230319T030536Z" \
+    --keyring-packages debian-keyring \
+    --apt-options "--yes --option Acquire::Retries=5 --option Acquire::http::Timeout=100 --option=Acquire::Check-Valid-Until=false --option=Acquire::http::Dl-Limit=1000 --option=Acquire::https::Dl-Limit=1000" \
+    --apt-recommends false \
     --cache-packages false \
-    --cache-stages false \
     --uefi-secure-boot enable \
     --binary-images iso-hybrid \
     --iso-application "$NAME" \
     --iso-volume "$NAME" \
     --firmware-binary false \
     --firmware-chroot false \
-    --zsync false \
     --security true \
-    --updates true \
-    --debootstrap-options "--exclude=pinephone-tweaks,mobile-tweaks-common,librem5-tweaks,pinetab-tweaks" \
+    --updates false \
+    --debootstrap-options "--exclude=pinephone-tweaks,mobile-tweaks-common,librem5-tweaks,pinetab-tweaks --include=apt-transport-https,ca-certificates,openssl" \
     --checksums md5 \
+    --clean \
     "${@}"
 
 
