--- a/etc/config/bootloaders/grub-pc/grub.cfg
+++ b/etc/config/bootloaders/grub-pc/grub.cfg
@@ -12,13 +12,13 @@ set menu_color_highlight=black/light-gray
 set timeout=5
 menuentry "Try or Install Vanilla OS" {
  set gfxpayload=keep
- linux	/casper/vmlinuz boot=casper quiet splash ---
- initrd	/casper/initrd.lz
+ linux	KERNEL_LIVE APPEND_LIVE ---
+ initrd INITRD_LIVE
 }
 menuentry "Try or Install Vanilla OS (Safe Graphics)" {
  set gfxpayload=keep
- linux	/casper/vmlinuz  boot=casper nomodeset quiet splash nomodeset ---
- initrd	/casper/initrd.lz
+ linux	KERNEL_LIVE APPEND_LIVE nomodeset ---
+ initrd INITRD_LIVE
 }
 grub_platform
 if [ "$grub_platform" = "efi" ]; then
