--- a/.github/workflows/orchid.yml
+++ b/.github/workflows/orchid.yml
@@ -14,23 +14,8 @@ jobs:
       options: --privileged -it
 
     steps:
-    - uses: actions/checkout@v4
-    
-    - name: De-bloat stock image
-      run: |
-        rm -r /run/host/usr/share/dotnet
-        rm -r /run/host${{ runner.tool_cache }}
-
-    - name: Install needed packages
-      run: apt update && apt install debootstrap -y
-
-    - name: Build ISO
-      run: ./build.sh etc/terraform.conf
-
     - name: Get current date
       run: echo "CURRENT_DATE=$(date +'%Y-%m-%d')" >> "$GITHUB_ENV"
 
-    - uses: actions/upload-artifact@v4
-      with:
-        name: VanillaOS 2 Beta ${{ env.CURRENT_DATE }} ${{ github.run.number }}
-        path: builds/
+    - name: Hello
+      run: echo ${{ github.run.number }}
